Bug 109357 - RenderText: Access characters through m_text instead of caching data pointers separately.
Summary: RenderText: Access characters through m_text instead of caching data pointers...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Text (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: Performance
Depends on:
Blocks:
 
Reported: 2013-02-09 08:46 PST by Andreas Kling
Modified: 2013-02-10 05:45 PST (History)
5 users (show)

See Also:


Attachments
Patch (4.63 KB, patch)
2013-02-09 18:14 PST, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-02-09 08:46:35 PST
The caching of String's is8Bit() and characters8()/characters16() on RenderText looks like a premature optimization.
We can save memory by going through m_text.*() instead. I see no measurable difference on PLT here.
Comment 1 Andreas Kling 2013-02-09 18:14:43 PST
Created attachment 187451 [details]
Patch
Comment 2 WebKit Review Bot 2013-02-10 05:45:39 PST
Comment on attachment 187451 [details]
Patch

Clearing flags on attachment: 187451

Committed r142398: <http://trac.webkit.org/changeset/142398>
Comment 3 WebKit Review Bot 2013-02-10 05:45:43 PST
All reviewed patches have been landed.  Closing bug.