Source/WebCore/rendering/RenderText.h
@@ -72,11 +72,11 @@ public:
 
     virtual VisiblePosition positionForPoint(const LayoutPoint&);
 
-    bool is8Bit() const { return m_is8Bit; }
-    const LChar* characters8() const { ASSERT(m_is8Bit); return m_data.characters8; }
-    const UChar* characters16() const { ASSERT(!m_is8Bit); return m_data.characters16; }
+    bool is8Bit() const { return m_text.is8Bit(); }
+    const LChar* characters8() const { return m_text.impl()->characters8(); }
+    const UChar* characters16() const { return m_text.impl()->characters16(); }
     const UChar* characters() const { return m_text.characters(); }
-    UChar characterAt(unsigned i) const { return m_is8Bit ? characters8()[i] : characters16()[i]; }
+    UChar characterAt(unsigned i) const { return is8Bit() ? characters8()[i] : characters16()[i]; }
     UChar operator[](unsigned i) const { return characterAt(i); }
     unsigned textLength() const { return m_text.length(); } // non virtual implementation of length()
     void positionLineBox(InlineBox*);
@@ -191,7 +191,6 @@ private:
                            // just dirtying everything when character data is modified (e.g., appended/inserted
                            // or removed).
     bool m_containsReversedText : 1;
-    bool m_is8Bit : 1;
     bool m_isAllASCII : 1;
     bool m_canUseSimpleFontCodePath : 1;
     mutable bool m_knownToHaveNoOverflowAndNoFallbackFonts : 1;
@@ -203,10 +202,6 @@ private:
     float m_endMinWidth;
 
     String m_text;
-    union {
-        const LChar* characters8;
-        const UChar* characters16;
-    } m_data;
 
     InlineTextBox* m_firstTextBox;
     InlineTextBox* m_lastTextBox;
